Replace habit archive with hard delete
